# amazon-product-review-scraper

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
src/: app.py  config.py  proxy.py  scraper.py  session.py
src/example_generated_data/csv_data/: review_data_oyster_sauce.csv
src/example_generated_data/html_data/oyster_sauce/: soup_product_data_for_B00842LTE2.html  soup_review_data_for_B00842LTE2_taste.html
src/example_generated_data/json_data/: review_data_oyster_sauce.json
src/helpers/: constants.py  request_params.py  request_utils.py  utils.py
src/models/: product_data_model.py
src/parsers/: csv_parser.py  json_parser.py
